<resources>
    <string name="app_name">CalendarTextView</string>

    <string name="previous_symbol">&lt;&lt;</string>
    <string name="next_symbol">&gt;&gt;</string>

    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>

    <string name="please_select">Please select</string>
</resources>
