<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_solid_dark_gray_stroke"
    android:orientation="vertical"
    android:padding="@dimen/_4sdp">

    <!-- date toolbar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_19sdp"
        android:background="@color/dark_gray3"
        android:paddingLeft="@dimen/_4sdp"
        android:paddingRight="@dimen/_4sdp">

        <!-- prev button -->
        <LinearLayout
            android:id="@+id/calendar_prev_button"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/previous_symbol"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp"/>
        </LinearLayout>

        <!-- date title -->
        <TextView
            android:id="@+id/calendar_date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/calendar_prev_button"
            android:layout_toStartOf="@+id/calendar_next_button"
            android:gravity="center"
            android:text="2017年 3月"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/white"
            android:textSize="@dimen/_8sdp"/>

        <!-- next button -->
        <LinearLayout
            android:id="@+id/calendar_next_button"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/next_symbol"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp"/>
        </LinearLayout>
    </RelativeLayout>

    <!-- days header -->
    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_19sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sunday"
            android:textColor="@color/red"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/monday"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tuesday"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/wednesday"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/thursday"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/friday"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/saturday"
            android:textColor="#0066ff"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- days view -->
    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="7"/>
</LinearLayout>